2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [#489463] Host: header is wrong IPv6 literal addr
	* url.c (otherinfo): IPv6 address should be quoted with bracket

2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02629]
	* linein.c (next_compl): completion for name including space

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02633]
	* url.c (parseURL2): filename should be quoted here, because
	                   it will be unquote() soon

2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rename install.sh to install-sh
	* XMakefile: s/install.sh/install-sh/

2001-12-07  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02622]
	* tagtable.tab (noframes): added
	* tagtable.tab (/noframes): added
	* fm.h (RB_NOFRAMES): added
	* html.h (HTML_NOFRAMES): added
	* html.h (HTML_N_NOFRAMES): added 
	* html.c (ALST_NOFRAMES): added
	* html.c (98 HTML_NOFRAMES): added
	* html.c (99 HTML_N_NOFRAMES): added
	* file.c (HTMLtagproc1): add HTML_NOFRAMES, HTML_N_NOFRAMES
	* file.c (HTMLtagproc1): don't meta refresh if it is in noframes and
	                        auto frame rendering
	* main.c (MAIN): use setAlarmEvent()
	* main.c (SigAlarm): ditto
	* main.c (setAlarm): ditto
	* main.c (setAlarmEvent): check if status == AL_UNSET

2001-12-06  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02619]
	* file.c (loadHTMLString): set document type

2001-12-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02618]
	* configure: fix typo in --mimetypes

2001-12-05  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02617]
	* scripts/Makefile (HELP_LIBS): added
	* scripts/Makefile (all): depends $(HELP_LIBS)
	* scripts/Makefile (install): depends $(HELP_LIBS)
	* scripts/Makefile (w3mhelp-funcname.pl): split from helplibs
	* scripts/Makefile (w3mhelp-funcdesc.pl): split from helplibs, touch
	* scripts/Makefile (clean): clean *-stamp
	* scripts/.cvsignore: add w3mhelp-funcdesc-stamp

2001-12-05  Tsutomu Okada <okada@furuno.co.jp>
