@@ -1,3 +1,9 @@
+2001-12-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 02635] dirlist
+	* file.c (loadGeneralFile): use pu.file instead of pu.real_file
+	* scripts/dirlist.cgi.in: modified for perl4
+
 2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [#489463] Host: header is wrong IPv6 literal addr
